clusters/my-cluster/apps/immich/immich-aliases.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
spec:
  type: ExternalName
  externalName: immich-redis-master.immich.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: immich
spec:
  type: ExternalName
  externalName: immich-db-rw.immich.svc.cluster.local
