clusters/my-cluster/apps/immich/immich-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.seanzhong.com`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
  tls:
    secretName: immich-tls
